# benchmarks

./: .dockerignore  .envrc  .gitignore  .tool-versions  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: ci.yml
aeron-benchmarks-aeron/src/main/cpp/: AeronExclusiveIpcBenchmark.cpp  AeronIpcBenchmark.cpp  AeronIpcNanomark.cpp  EmbeddedAeronMediaDriver.h  NanoMark.h  TimeBenchmark.cpp
benchmarks-aeron/src/main/cpp/: AeronExclusiveIpcBenchmark.cpp  AeronExclusiveIpcNanomark.cpp  AeronIpcBenchmark.cpp  AeronIpcNanomark.cpp  Baseline.cpp  CMakeLists.txt  EmbeddedAeronMediaDriver.h  NanoMark.h  NanoMarkTest.cpp  TimeBenchmark.cpp
benchmarks-api/src/test/java/org/other/benchmark/impl/: MessageTransceiverFromAnotherPackage.java
benchmarks-api/src/test/resources/: test.properties
benchmarks-grpc/src/main/proto/: grpc_benchmarks.proto
benchmarks-kafka/src/test/resources/: log4j.properties
certificates/: README  ca.cnf  ca.key  ca.pem  client.cnf  client.key  client.keystore  client.pem  server.cnf  server.key  server.keystore  server.pem  truststore.p12
config/checkstyle/: checkstyle.xml  suppressions.xml
cppbuild/: cppbuild  cppbuild.cmd
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: aggregate-results  aggregate-results.cmd  aws-remote-testing.sh  benchmark-runner  benchmark-runner.cmd  collect-environment-info  k8s-remote-testing.sh  latency_around_failover.p  plot_latency_around_failover  remote-benchmarks-functions  remote-benchmarks-helper  remote-benchmarks-runner  results-plotter.py  run-java  run-java.cmd
scripts/aeron/: README  README.md  aeron-remote-benchmarks-functions  archive-node  c-aeronmd-dpdk  c-media-driver  c-media-driver.cmd  cluster-backup-node  cluster-backup-node.cmd  cluster-client  cluster-client.cmd  cluster-node  cluster-node.cmd  echo-client  echo-client.cmd  echo-server  echo-server.cmd  enable-embedded-driver.properties  failover-cluster-client  live-recording-client  live-recording-client.cmd  live-replay-client  live-replay-client.cmd  live-replay-local-archive-client  live-replay-local-archive-client.cmd  live-replay-local-archive-server  live-replay-local-archive-server.cmd  live-replay-remote-archive-client  live-replay-remote-archive-client.cmd  live-replay-remote-archive-server  live-replay-remote-archive-server.cmd  live-replay-server  live-replay-server.cmd  low-latency-archive.properties  low-latency-driver.properties  media-driver  media-driver.cmd  remote-archive-replay-mdc-benchmarks  remote-benchmarks-helper  remote-cluster-benchmarks  (+9 more)
scripts/deploy/: fabfile.py
scripts/grpc/: README.md  blocking-client  blocking-client.cmd  remote-grpc-benchmarks  server  server.cmd  streaming-client  streaming-client.cmd
scripts/k8s/: k8s-benchmark-entrypoint.sh  k8s-benchmark.yml  k8s-c-media-driver.sh  k8s-common  k8s-echo-client.sh  k8s-echo-server.sh  k8s-java-media-driver.sh  k8s-test-customisation.yml  kustomization.yml  settings.yml
scripts/k8s/aeron-echo-c/: aeronmd-c.yml  all-pods.yml  echo-client.yml  kustomization.yml  settings.yml
scripts/k8s/aeron-echo-dpdk/: aeronmd-dpdk.yml  all-pods.yml  echo-client.yml  echo-server.yml  kustomization.yml  settings.yml
scripts/k8s/aeron-echo-java/: aeronmd-java.yml  all-pods.yml  echo-client.yml  kustomization.yml  settings.yml
scripts/k8s/base/: base-containers.yml  echo-server.yml  k8s-benchmark.yml  kustomization.yml  settings.yml
scripts/kafka/: README.md  benchmark  client  client.cmd  client.properties  common.properties  consumer.properties  kafka-start  kafka-start.cmd  log4j.properties  producer.properties  remote-kafka-benchmarks  server.properties  stop-all  stop-all.cmd  topic.properties  zookeeper-start  zookeeper-start.cmd  zookeeper.properties
scripts/samples/cluster_localhost/: client.properties  cluster.properties  failover.properties  node0.properties  node1.properties  node2.properties  start_cluster.sh  stop_cluster.sh
src/jmh/java/uk/co/real_logic/benchmarks/: CombinedStepsMatrixBenchmark.java  MathBenchmark.java  MatrixBenchmark.java
src/jmh/java/uk/co/real_logic/benchmarks/latency/: A1BaselineBenchmark.java  AeronExclusiveIpcBenchmark.java  AeronIpcBenchmark.java  ArrayBlockingQueueBenchmark.java  BaselineBenchmark.java  ConcurrentLinkedQueueBenchmark.java  ConditionVariablesPingPong.java  Configuration.java  DisruptorBenchmark.java  DisruptorBlockingQueueBenchmark.java  DisruptorOptimisedBenchmark.java  LinkedBlockingQueueBenchmark.java  LocklessManyToManyArrayQueueBenchmark.java  LocklessManyToOneArrayQueueBenchmark.java  LocklessManyToOneLinkedQueueBenchmark.java  ManyToManyConcurrentArrayQueueBenchmark.java  ManyToOneConcurrentArrayQueueBenchmark.java  ManyToOneConcurrentLinkedQueueBenchmark.java  ManyToOneRingBufferBenchmark.java  OneToOneRingBufferBenchmark.java  PushPullBlockingQueueBenchmark.java
src/main/cpp/: AeronExclusiveIpcBenchmark.cpp  AeronExclusiveIpcNanomark.cpp  AeronIpcBenchmark.cpp  AeronIpcNanomark.cpp  Baseline.cpp  CMakeLists.txt  EmbeddedAeronMediaDriver.h  NanoMark.h  NanoMarkTest.cpp  SpscConcurrentArrayQueue.h  TimeBenchmark.cpp
src/main/java/uk/co/real_logic/benchmarks/latency/: A1BaselineBenchmark.java  AeronExclusiveIpcBenchmark.java  AeronIpcBenchmark.java  ArrayBlockingQueueBenchmark.java  ConcurrentLinkedQueueBenchmark.java  Configuration.java  DisruptorBenchmark.java  LinkedBlockingQueueBenchmark.java  ManyToOneConcurrentArrayQueueBenchmark.java  ManyToOneConcurrentLinkedQueueBenchmark.java  ManyToOneRingBufferBenchmark.java
src/main/java/uk/co/real_logic/benchmarks/rtt/: Configuration.java  Harness.java  InMemoryMessageTransceiver.java  LoadTestRig.java  MessageProvider.java  MessagePump.java  MessageRecorder.java  MessageTransceiver.java  ResultsAggregator.java  RttHistogram.java  SampleMessageProvider.java  SampleMessagePump.java
src/test/java/uk/co/real_logic/benchmarks/rtt/: ConfigurationTest.java  HarnessTest.java  InMemoryMessageTransceiverTest.java  LoadTestRigTest.java  (+4 more)
(+168 files in other folders)
